# proj-flink

./: README.md  pyproject.toml
java/FlinkCommerc/: pom.xml
python/: main.py
