[tool.poetry]
name = "proj-flink"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^25.8.0"
confluent-kafka = "^2.4.0"
simplejson = "^3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
